fixing spacing and removing redundant CSS

--- a/basketball-scoreboard/index.css
+++ b/basketball-scoreboard/index.css
@@ -14,9 +14,7 @@ h3 {
 
 .container {
     display: flex;
-    justify-content: space-around;
-    width: 50%;
-    max-width: 500px;
+    justify-content: space-between;
     margin: auto; 
 }
 
@@ -25,7 +23,12 @@ h3 {
 }
 
 .main-body {
-    padding-top: 20vh;
+    padding-top: 18vh;
+}
+
+.container,
+.newgame-btn {
+    max-width: 400px;
 }
 
 .score,
@@ -50,6 +53,13 @@ h3 {
     justify-content: space-between;
 }
 
+.newgame-btn {
+    text-align: center;
+    max-width: 400px;
+    width: 80%;
+    margin: 30px auto 0px auto;
+}
+
 .increment-btn p,
 .newgame-btn p {
     line-height: 25px;
@@ -60,11 +70,8 @@ h3 {
     cursor: pointer;
 }
 
-.newgame-btn {
-    text-align: center;
-    max-width: 500px;
-    width: 80%;
-    margin: auto;
+.increment-btn p {
+    margin-top: 10px;
 }
 
 .increment-btn p:hover,
@@ -73,10 +80,4 @@ h3 {
 .newgame-btn p:focus {
     color: #1B244A;
     background: #9AABD8;
-}
-
-@media screen and (max-width: 800px) {
-    .container {
-        width: 90%;
-    }
 }
